<resources>
    <string name="app_name">VocabularyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Giriş Yap</string>
    <string name="email_address">Email adresi</string>
    <string name="password">Parola</string>
    <string name="remember_me">Beni Hatırla</string>
    <string name="forget_password">Şifremi Unuttum</string>
    <string name="register">Kayıt Ol</string>
    <string name="register_direction_explain">Henüz hesabınız yoksa kayıt olabilirsiniz.</string>
    <string name="confirm_password">Parolayı Tekrarla</string>
    <string name="login_direction_explain">Hesabınız varsa giriş yapabilirsiniz.</string>
    <string name="reset_password">Parolanızı \n Yenileyin</string>
    <string name="enter_email_address">Email adresinizi giriniz</string>
    <string name="send_reset_mail">Gönder</string>
    <string name="send_reset_mail_explain">Mail adresinize parola yenileme linki gönderilecektir.</string>
    <string name="home">Anasayfa</string>
    <string name="profile">Profil</string>
    <string name="saved_words">Kelimelerim</string>
    <string name="tv_true">Doğru</string>
    <string name="tv_false">Yanlış</string>
    <string name="learned">Öğrenilen</string>
    <string name="sign_out">Çıkış Yap</string>
    <string name="edit_profile">Profil Düzenle</string>
    <string name="save">Kaydet</string>
    <string name="favorites">Favoriler</string>
    <string name="learned_words">Öğrenilenler</string>
</resources>